--- a/flipTacToe/Base.lproj/Main.storyboard
+++ b/flipTacToe/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rot-cN-mJF">
-                                <rect key="frame" x="234" y="79" width="97" height="88"/>
+                                <rect key="frame" x="234" y="46" width="97" height="88"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="CW"/>
                                 <connections>
@@ -94,7 +94,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pFC-oW-uD0">
-                                <rect key="frame" x="45" y="76" width="100" height="91"/>
+                                <rect key="frame" x="45" y="43" width="100" height="91"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="CCW"/>
                                 <connections>
@@ -452,7 +452,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Debug" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jFN-wX-p6R">
-                                <rect key="frame" x="94" y="168" width="51" height="21"/>
+                                <rect key="frame" x="159" y="574" width="51" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -634,6 +634,20 @@
                                     <action selector="RightButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vAz-1d-5te"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player2 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPM-Mb-K8y">
+                                <rect key="frame" x="234" y="151" width="93" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player1 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYF-m2-F8C">
+                                <rect key="frame" x="49" y="150" width="96" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -691,6 +705,8 @@
                         <outletCollection property="Squares" destination="wW9-EH-Qe8" collectionClass="NSMutableArray" id="wTD-by-bpL"/>
                         <outletCollection property="Squares" destination="b9j-7o-BPB" collectionClass="NSMutableArray" id="1iq-w8-kmH"/>
                         <outletCollection property="Squares" destination="zG1-gy-RBM" collectionClass="NSMutableArray" id="WEa-Gh-YSd"/>
+                        <outletCollection property="ScoreBoard" destination="jYF-m2-F8C" collectionClass="NSMutableArray" id="9g1-Ah-x8w"/>
+                        <outletCollection property="ScoreBoard" destination="fPM-Mb-K8y" collectionClass="NSMutableArray" id="uDI-vA-zVz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
